fix height of sidebar links on mobile

--- a/app/javascript/styles/queerhaus-bright/diff.scss
+++ b/app/javascript/styles/queerhaus-bright/diff.scss
@@ -205,7 +205,8 @@ a.status-card.compact:hover  {
   .column-link {
     background: $white;
     border-radius: 25px;
-    margin-bottom: 3px;
+    margin-bottom: 4px;
+    padding: 13px;
 
     &:hover,
     &:active,
